--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,11 @@ importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,margin)
+importFrom(ggplot2,scale_color_discrete)
+importFrom(ggplot2,scale_fill_discrete)
 importFrom(ggplot2,theme)
+importFrom(ggsci,scale_color_jama)
+importFrom(ggsci,scale_fill_jama)
 importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(pROC,ci.auc)
