modify fill color for bars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(evaluate_prediction_bin)
 export(evaluate_prediction_prob)
 export(evaluate_prediction_score)
 import(ggplot2)
+import(ggsci)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -30,6 +31,7 @@ importFrom(pROC,coords)
 importFrom(pROC,roc)
 importFrom(probably,cal_plot_breaks)
 importFrom(rlang,.data)
+importFrom(scales,manual_pal)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,glm)
