calibration curves change to logistic recalibration framework

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(evaluate_prediction_prob)
 export(evaluate_prediction_score)
 import(ggplot2)
 import(ggsci)
-importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
@@ -30,13 +29,11 @@ importFrom(magrittr,"%>%")
 importFrom(pROC,ci.auc)
 importFrom(pROC,coords)
 importFrom(pROC,roc)
-importFrom(probably,cal_plot_breaks)
+importFrom(probably,cal_plot_logistic)
 importFrom(rlang,.data)
 importFrom(scales,manual_pal)
 importFrom(stats,as.formula)
-importFrom(stats,coef)
 importFrom(stats,glm)
-importFrom(stats,lm)
 importFrom(stats,predict)
 importFrom(stats,qf)
 importFrom(stats,qt)
