--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: seeBias
 Type: Package
-Title: Visual Assessment of Prediction Bias
-Version: 0.1.3
+Title: seeBias: Evaluating and Visualizing Bias in AI Models
+Version: 0.2.0
 Authors@R: c(person("Yilin", "Ning", role = c("aut","cre"), comment = c(ORCID = "0000-0002-6758-4472"),
                     email= "yilin.ning@duke-nus.edu.sg"),
              person("Yian", "Ma", role = c("aut"), 
@@ -11,8 +11,12 @@ Authors@R: c(person("Yilin", "Ning", role = c("aut","cre"), comment = c(ORCID = 
              person("Nan", "Liu", role = c("aut"), comment = c(ORCID = "0000-0003-3610-4883"),
                     email = "liu.nan@duke-nus.edu.sg"))
 Maintainer: Yilin Ning <ningyilinnyl@gmail.com>
-Description: Visually assess performance bias of prediction by subgroups.
-License: GPL (>= 2)
+Description: A lightweight toolkit to evaluate and visualize bias in AI 
+    prediction models. seeBias supports comprehensive subgroup assessments with 
+    respect to model classification performance, calibration, and beyond, 
+    integrates fairness metrics with model performance, and offers customizable 
+    visualizations to facilitate transparent reporting.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
